<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.davidalaw.bsllearningtool.mFragments.QuizMenuFragment">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:weightSum="1">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select a Category: "
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="8dp">

            <ListView
                android:id="@+id/quiz_categories_list"
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginBottom="10dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/select_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:text="Select Number of Questions"
                android:textSize="18sp"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/start_quick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:elevation="24dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="Start Quiz"/>
        </RelativeLayout>



    </LinearLayout>

</FrameLayout>
