<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_nav"
        android:title="Home"
        android:icon="@drawable/ic_home_light"/>


    <item
        android:id="@+id/favourites_nav"
        android:title="Favourites"
        android:icon="@drawable/ic_checked_favourite"/>

    <item
        android:id="@+id/quiz_menu_nav"
        android:title="Quiz"
        android:icon="@drawable/ic_faq"/>


</menu>
