...
                android:id="@+id/nav_cities"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Cities + Countries" />
            <item
                android:id="@+id/nav_family_members"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Family Members" />
            <item
                android:id="@+id/nav_work"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Work" />

            <item
                android:id="@+id/nav_personal_info"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Personal Information" />
            <item
...
