<resources>
    <string name="app_name">BSLearn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name=".SignMaterialActivity">BSLearn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bsl">BSL:</string>
    <string name="sign">Sign</string>
    <string name="next">Next</string>
    <string name="score">Score:</string>
    <string name="select_number_of_questions">Select Number of Questions:</string>
    <string name="title_activity_maps">Map</string>


</resources>
