<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.davidalaw.bsllearningtool.mFragments.CategoryListFragment">
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/category_list_view"
                android:layout_width="match_parent"
                android:layout_height="425dp"
                android:divider="#ffffff"
                android:dividerHeight="0.25dp"
                />

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
