...
                android:maxLines="1"
                android:gravity="center_horizontal"
                android:textAllCaps="false"
                android:textColor="#FFFF"
                android:textSize="18sp"/>
                <ImageButton
                    android:id="@+id/share"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_share_white"
                    android:background="@color/colorPrimary"
                    android:gravity="left"/>
                <CheckBox
...
