<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <LinearLayout android:id="@+id/linear_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingBottom="8dp"
                  android:paddingLeft="8dp"
                  android:paddingRight="8dp"
                  android:paddingTop="8dp"
                  android:weightSum="1">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speed:"
            android:textColor="@color/colourText"
            android:textIsSelectable="false"
            android:textSize="18sp"/>
    </RelativeLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:animateLayoutChanges="false"
            android:padding="8dp">

            <TableRow android:layout_gravity="center"
                android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/pointtwofivespeed"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0.25x"
                    android:textColor="@color/colourText"/>

                <CheckBox
                    android:id="@+id/pointfivespeed"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="0.5x"
                    android:textColor="@color/colourText"/>

                <CheckBox
                    android:id="@+id/pointSevenFivespeed"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="0.75x"
                    android:textColor="@color/colourText"/>

                <CheckBox
                    android:id="@+id/fullspeed"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:text="1.0x"
                    android:textColor="@color/colourText"/>
            </TableRow>
        </TableLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="5dp">

    <net.protyposis.android.mediaplayer.VideoView
        android:id="@+id/videoView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bsl_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colourText"
            android:textStyle="bold"/>

    </RelativeLayout>
    </LinearLayout>

</ScrollView>
